# auto-music-gen

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
src/auto_music_gen/: __init__.py  __main__.py  config.py  gpu.py  main.py
src/auto_music_gen/client/: base.py  local.py  runpod.py
src/auto_music_gen/models/: params.py  results.py
src/auto_music_gen/server/: launcher.py
src/auto_music_gen/tui/: app.py  display.py  progress.py  prompts.py  tags.py
tests/: conftest.py  test_config.py  test_gpu.py
tests/test_client/: test_local.py  test_runpod.py
tests/test_models/: test_params.py  test_results.py
tests/test_output/: test_manager.py
tests/test_server/: test_launcher.py
tests/test_tui/: test_display.py  test_prompts.py  test_tags.py
